clusters/production/palworld/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: gaming
  labels:
    kustomize.toolkit.fluxcd.io/prune: disabled
