clusters/production/palworld/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: palworld
  labels:
    app: palworld
spec:
  type: ClusterIP
  ports:
    - name: rest-api
      port: 8212
      targetPort: rest-api
      protocol: TCP
    - name: rcon
      port: 25575
      targetPort: rcon
      protocol: TCP
    - name: metrics
      port: 9877
      targetPort: metrics
      protocol: TCP
  selector:
    app: palworld
