clusters/production/palworld/httproute.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: palworld
spec:
  parentRefs:
    - name: https-external
      namespace: kgateway-system
  hostnames:
    - palworld.rpcu.io
  rules:
    - backendRefs:
        - name: palworld
          port: 8212
